Service Regression/tests/00DM0000001eO1fMAE/objects/Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>APFD_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APFD Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_GM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advertised Make GM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertised_Make__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advertised Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_for_Future_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Future Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork_Dropdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork - Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork_PreApprove_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork - PreApprove Case #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAC_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BAC Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMWs_Dealer_Center_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMW&apos;s Dealer Center ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMWs_Location_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMW&apos;s Location ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_to_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Bill to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blank_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blank Field_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blank_Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blank Field_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Call Tracking Call Record</inlineHelpText>
        <label>KBB Showcase Call Tracking Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_Used_KBB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking Used Call Record</inlineHelpText>
        <label>KBB Call Tracking Used Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Call Record</inlineHelpText>
        <label>Call Tracking New Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_new_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking New Call Record</inlineHelpText>
        <label>KBB Call Tracking New Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Record_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Call Record</inlineHelpText>
        <label>Call Tracking Used Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Autotrader_Listing_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Autotrader Listing Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Type_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Type Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cars_com_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cars.com ID#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_thru_Skyscrapers_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Skyscrapers Click-thru URL</inlineHelpText>
        <label>Skyscrapers Click-thru URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_thru_URL_New__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leaderboard New Click-thru URL</inlineHelpText>
        <label>Leaderboard New Click-thru URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_thru_URL_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leaderboard Used Click-thru URL</inlineHelpText>
        <label>Leaderboard Used Click-thru URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case_New__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leaderboard New Co-Op Pre-Approval Case #</inlineHelpText>
        <label>Leaderboard New Co-Op Pre-Approval Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case_Skyscrapers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Skyscrapers Co-Op Pre-Approval Case #</inlineHelpText>
        <label>Skyscrapers Co-Op Pre-Approval Case #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leaderboard Used Co-Op Pre-Approval Case #</inlineHelpText>
        <label>Leaderboard Used Co-Op Pre-Approval Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_op_Contact_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-op Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_op_Level_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-op Level of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobalt_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Cobalt URL</inlineHelpText>
        <label>Cobalt URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <defaultValue>false</defaultValue>
        <label>County</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_URL_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom URL Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBA Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Specialties_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Specialties Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Website_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>LeadDriver Dealer Website URL</inlineHelpText>
        <label>Dealer Website URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_logo_submitted_to_Autotrader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer logo submitted to Autotrader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealership Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliver_1st_of_the_next_month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver 1st of the next month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Call_Tracking_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Enhanced</inlineHelpText>
        <label>Call Tracking New Enhanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Call_Tracking_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Enhanced</inlineHelpText>
        <label>Call Tracking Used Enhanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook.com/</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Franchise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_Line_Pro_Model_Fields_GM_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front-Line Pro Model Fields (GM Package)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_Line_Pro_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front-Line Pro Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Rate_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Rate Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Rate_Below_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Rate / Below Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Front_Line_Pro_Model_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 1 GM Front-Line Pro Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Front_Line_Pro_Model_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 2 GM Front-Line Pro Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Front_Line_Pro_Model_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 3 GM Front-Line Pro Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_NEW_CAR_SET_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM NEW CAR SET 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_NEW_CAR_SET_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM NEW CAR SET 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_NEW_CAR_SET_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM NEW CAR SET 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Blank_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 1 GM Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Blank_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 2 GM Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Blank_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 3 GM Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 1 GM Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 2 GM Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 3 GM Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_Quantity_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 1 GM Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_Quantity_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 2 GM Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Make_Quantity_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New 3 GM Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Set_1_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM New Car Set 1 Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Set_2_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM New Car Set 2 Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Set_3_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM New Car Set 3 Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_USED_CAR_SET_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM USED CAR SET 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_USED_CAR_SET_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM USED CAR SET 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_USED_CAR_SET_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM USED CAR SET 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used 1 GM Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used 2 GM Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used 3 GM Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_Quantity_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used 1 GM Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_Quantity_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used 2 GM Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Make_Quantity_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used 3 GM Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Set_1_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Used Car Set 1 Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Set_2_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Used Car Set 2 Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Used_Car_Set_3_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Used Car Set 3 Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_Dealer_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Haystak Dealer Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Haystak URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Display_New_Car_Ad_Artwork_GM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inline Display New Car Ad Artwork (GM )</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Display_New_Car_Ad_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inline Display New Car Ad Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Display_used_Car_Ad_Artwork_GM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Inline Display Used Car Ad Artwork (GM)</inlineHelpText>
        <label>Inline Display Used Car Ad Artwork (GM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Display_used_Car_Ad_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Inline Display Used Car Ad Artwork</inlineHelpText>
        <label>Inline Display Used Car Ad Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBB_Lead_Driver_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KBB Lead Driver Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leaderboard_New_Artwork_Gm_packages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leaderboard New Artwork (Gm packages)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leaderboard_New_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leaderboard New Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leaderboard_Used_Artwork_GM_Packages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leaderboard Used Artwork (GM Packages)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leaderboard_Used_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leaderboard Used Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dealer Ratings Link</inlineHelpText>
        <label>Dealer Ratings Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Dealer Ratings Link</inlineHelpText>
        <label>KBB Dealer Ratings Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MINIs_Dealer_Center_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MINI&apos;s Dealer Center ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MINIs_Location_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MINI&apos;s Location ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_with_Any_Make__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make with Any Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Advertising Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_CRM_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name of CRM System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Contact_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>OEM Specials New Car Contact Email</inlineHelpText>
        <label>New Car Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Inventory_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Inventory Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Make_Fields_GM_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to indicate if Car Make fields (i.e. New Car Make, New Car Make Quantity, Used Car Make, Used Car Make Quantity) are applicable to Package Configuration record</description>
        <label>New Car Make Fields (GM Package)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_reimbursable_amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-reimbursable amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OEM Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Co_op_Submission_CPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-Out Co-op Submission CPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Co_op_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-Out Co-op Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>OEM Specials Other Email</inlineHelpText>
        <label>Other Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>OEM Specials Primary Contact Email</inlineHelpText>
        <label>Primary Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dealer Ratings Provider</inlineHelpText>
        <label>Dealer Ratings Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Dealer Ratings Provider</inlineHelpText>
        <label>KBB Dealer Ratings Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Direct_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Call Tracking Re-Direct</inlineHelpText>
        <label>KBB Showcase Call Tracking Re-Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Direct_Used_KBB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking Used Re-Direct</inlineHelpText>
        <label>KBB Call Tracking Used Re-Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Direct_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Re-Direct</inlineHelpText>
        <label>Call Tracking New Re-Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Direct_new_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking New Re-Direct</inlineHelpText>
        <label>KBB Call Tracking New Re-Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Direct_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Re-Direct</inlineHelpText>
        <label>Call Tracking Used Re-Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replace_Current_Spotlights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replace Current Spotlights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Email_Address_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Recipients Email Address 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Email_Address_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Recipients Email Address 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Email_Address_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Recipients Email Address 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Name_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Recipients Name 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Name_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Recipients Name 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Recipients_Name_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Recipients Name 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCA_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCA Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_Pro_OPT_IN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New Pro OPT IN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_New_Use_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink New Use Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_Pro_OPT_IN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used Pro OPT IN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink_Used_Use_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Used Use Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Buckets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skyscrapers Buckets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Co_Op_Artwork_GM_Packages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skyscrapers Co-Op Artwork (GM Packages)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Co_Op_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skyscrapers Co-Op Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skyscrapers_Slots__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skyscrapers Slots</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spotlight_Duration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spotlight Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spotlight_Make__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spotlight Make</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spotlight_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Multiples of 5</description>
        <label>Spotlight Quantity Enter Multiples of 5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealer_Website_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealer Website Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealership Contact Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_Mobile_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealership Contact Mobile Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_Mobile_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealership Contact Mobile Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will be listed on website.</inlineHelpText>
        <label>TIM Dealership Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealership Contact phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_Contact_title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealership Contact title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Dealership_XML_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Dealership XML Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Contact E-mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Contact Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Contact Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Duration_12_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Duration (12 Months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Duration_Alpha_all_others__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Term Duration (1, 2, 3, 6, 9 months)</inlineHelpText>
        <label>Term Duration (1, 2, 3, 6, 9 months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Duration_Skyscrapers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Term Duration (3, 6, 9, 12 months)</inlineHelpText>
        <label>Term Duration (3, 6, 9, 12 months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Duration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Email_Address_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Text Email Address</inlineHelpText>
        <label>KBB Showcase Text Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>LeadDriver Text Email Address</inlineHelpText>
        <label>LeadDriver Text Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Advertised_Make_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Featured Advertised Make</inlineHelpText>
        <label>Featured Advertised Make</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>